# simd-experiments

./: .gitignore  CMakeLists.txt
src/: ScriptOutputProcessor.java  runner.sh  strided-column-simd-correctness.cpp  strided-column-simd.cpp  strided-column-simple-correctness.cpp  strided-column-simple.cpp
